--- a/my-profile.qmd
+++ b/my-profile.qmd
@@ -5,5 +5,5 @@ subtitle: "Aubrey Mpungose"
 
 ![](images/aubrey.jpg){width=200}
 
-I completed my MSc in Geography in 2017 and currently completing my PhD, focusing on geographies of youth in Durban. I work as a lecturer in the School of Education, University of KwaZulu Natal, Pietermaritzburg Campus. My research interests include urban and political geography, political economy and computational social science. I use data science tools and computational methods in my research and enjoy analysing data.
+I am a geographer by training, currently completing my PhD, focusing on the geographies of youth. I work as a lecturer in the School of Education, University of KwaZulu Natal, Pietermaritzburg Campus. My research interests include urban and political geography, political economy, computational social science and quantitative social science. I use data science tools,  computational methods and statistical modelling in my research. I enjoy analysing data in R and Python.
 
