--- a/weeks/week-4.qmd
+++ b/weeks/week-4.qmd
@@ -8,4 +8,8 @@ toc: true
 
 ## 4.1 Introduction
 
+In this week we focus on advanced data manipulation in R. We will continue using the `dplyr` package in the `tidyverse`. 
 
+## 4.2 Prepration
+
+### Download data
