--- a/weeks/week-3.qmd
+++ b/weeks/week-3.qmd
@@ -1,10 +1,12 @@
 ---
-title: " 3 Data Manupulation I"
+title: "3 Data Manupulation"
 code-copy: true
 code-line-numbers: true
 tidy: true
 toc: true
 ---
+
+# 3.1 PART I
 
 ## Learning objectives
 
@@ -12,7 +14,7 @@ toc: true
 
 -   Manipulate, transform and analyse dataframes
 
-## 3.1 Introduction
+## 3.1.1 Introduction
 
 Dataframes, as we saw [the previous section](/weeks/week-2.html), a dataframe is a tabular data format, with columns and rows. Columns are *variable* names and rows are individual *observations*. Let us recreate the previous dataframe of names and ages of this class:
 
@@ -43,7 +45,7 @@ data_frame$age
 
 We can do a range of analysis with a dataframe. But firstly, we need to use right functions for this task.
 
-## 3.2 Base R vs Tidyverse
+## 3.1.2 Base R vs Tidyverse
 
 Until now, we have used functions within **Base R**, which are already installed in R. But in many cases, we want to use external packages to do any task we want. For example, if we want to do spatial and GIS analysis, we can install the `sf` package; we can use `tidymodels` to conduct machine learning models and so on. There are over 2000 R packages, contributed by different individuals around the world, and they are stored and curated in the [CRAN website](https://cran.r-project.org/web/packages/).
 
@@ -77,7 +79,7 @@ After installing the package, you need to load it into the current R session usi
 library(tidyverse)
 ```
 
-## 3.3 Using `dplyr`
+## 3.1.3 Using `dplyr`
 
 In this section `dplyr` packages, which is included in the `tidyverse` collection of packages. `dplyr` has 5 verbs/functions:
 
@@ -91,7 +93,7 @@ In this section `dplyr` packages, which is included in the `tidyverse` collectio
 
 -   `mutate()`
 
-### 3.3.1 Load the dataset
+### Load the dataset
 
 All along, we have been working with fictional data. Let us use the `gapminder` dataset, which can be installed as:
 
@@ -142,7 +144,7 @@ You can get a sample of the first observations/rows using `head()` function:
 head(gapminder)
 ```
 
-### 3.4.2 `select()` function
+### 3.1.4 `select()` function
 
 We may be interested in some of the columns in the `gampminder` dataframe, let say, for example, "country" and "pop" variables and discard others; we use the `select()` function:
 
@@ -182,7 +184,7 @@ gapminder_selected # print
 
 Now we have saved results as `gapminder_selected`, and we can do other analysis with this object because we have saved it. So, in a nutshell, when you run a code without assigning results into an object, using the `<-` operator, **results will not be saved but will be printed**.
 
-### 3.4.3 `filter()` function
+### 3.1.5 `filter()` function
 
 You may be interested in observations that meet certain conditions. We use `filter()` function to return the list that meet our conditions. Let us "continent" variable in `gapminder` dataframe. Get a basic table first:
 
@@ -263,7 +265,7 @@ One of the common mistakes when using filter are:
 - using `>`, `<` to character vectors
 
 
-### 3.4.4 `arrange()` function
+### 3.1.6 `arrange()` function
 
 `arrange()` function sort values in ascending or descending order; the default is ascending:
 
@@ -281,7 +283,7 @@ gapminder |>
   
 ```
 
-### 3.4.5 `summarise()`
+### 3.1.7 `summarise()`
 
 The `summarise()` function is for calculating statistics such as mean, median, sum, min, max, etc. let us use examples. We may want the average GDP per capita in in 2007:
 
@@ -332,7 +334,7 @@ gapminder_2007 |>
   summarise(total_pop = sum(pop))
 ```
 
-### 3.4.6 `mutate()`
+### 3.1.8 `mutate()`
 
 Suppose we want to create a new column in the dataframe, using existing columns. The `mutate()` function is useful here. Consider the `gdpPercap` column/variable; from your basic school economics or general knowledge, you know that a GDP is total value of goods and services produced within a country, and is used to measure the economy. We also know that the GDP per capita is calculated by dividing GDP by the population, so it is GDP per person. In `gapminder` dataframe, there are `gdpPercap` and `pop`, which we can use to calculate GDP of a country; we will use `mutate()` for this:
 
@@ -350,10 +352,75 @@ gapminder_2007
 
 ![](images/visualise_mutate.png)
 
-## 3.5 Conclusion
+# 3.2 PART II: Other `dplyr` verbs
 
-We have explored, the basic of data manipulation using `dplyr` package. In the next chapter, things will get more serious. 
-  
+There are other important `dplyr` functions that are useful for data manipulation. We still use the gapminder data
+
+```{r load gapminder session II}
+library(tidyverse)
+gp <- gapminder::gapminder
+```
+
+## 3.2.1 `group_by()` function
+
+Suppose you want to find the average life expectancy per continent. `group_by()` function comes in handy when we want to aggregate data by group:
+
+```{r group_by 1}
+
+gp |> 
+  group_by(continent) |> 
+  summarise(le_continent = mean(lifeExp))
+```
+
+We can arrange the output from highest to lowest:
+
+```{r group_by abd arrange}
+
+gp |> 
+  group_by(continent) |> 
+  summarise(life_exp_continent = mean(lifeExp)) |> 
+  arrange(desc(life_exp_continent))
+```
+
+
+You can play around with  `group_by()` and other `dplyr` functions:
+
+```{r group_by and other fucntions}
+
+
+gp |> 
+  filter(year == 2007) |> 
+  group_by(continent) |> 
+  summarise(life_exp_continent = mean(lifeExp), 
+            median_life_exp = median(lifeExp),
+            sd_life_exp = sd(lifeExp))
+```
+
+# Conclusion 
+
+There are two key takeaways from this week:
+
+- `dplyr` (and the rest of `tidyverse`) is magic
+
+- The pipe `|>` operator is awesome
+
+The pipe operator allows us to connect different functions in a single code: 
+
+![Credit: @fjnogales](images/pipe.gif)
+
+In the next section, we introduce the fundamentals of data visualisation using `ggplot2` package (also included in the `tidyverse`)
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
