--- a/weeks/week-4.qmd
+++ b/weeks/week-4.qmd
@@ -42,7 +42,7 @@ library(tidyverse)
 
 Create a basic scatterplot of life expectancy and GDP per capita:
 
-```{ggplot-intro-scatter}
+```{r ggplot-intro-scatter}
 ggplot(data = gapminder,
     aes(x = gdpPercap, y = lifeExp)) + 
     geom_point()
